# dingir-exchange

./: .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs  config.yaml  diagram.bpmn  market_test_output.txt  rust-toolchain  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: basic_test.yml  cargo-audit.yml  check.yml  integration-test.yml  integration.yml  integration_test.yaml  integration_test.yml  lint.yml  unit-test.yml  unit_test.yml
config/: default.yaml  development.yaml  restapi.yaml  staging.yaml
docker/: docker-compose.yaml  envoy.yaml
docker/configs/: proxy.conf
examples/js/: .env.advise  .eslintrc.js  .eslintrc.json  .prettierrc  RESTClient.ts  accounts.jsonl  accounts.ts  client.mjs  client.ts  config.mjs  config.ts  depoist.js  deposit.ts  dumpdb.js  dumpdb.ts  exchange_helper.ts  grpc_client.js  kafka_client.mjs  kafka_client.ts  monitor_kafka_message.js  monitor_kafka_message.ts  multi_market.ts  ordersigner.proto  package-lock.json  package.json  print_orders.js  print_orders.ts  put_batch_orders.ts  reload_market.js  reload_market.ts  reset.js  reset.ts  rest_get_user.ts  set_markets.js  set_markets.ts  signer_server.ts  stress.js  stress.ts  tick.js  tick.ts  (+8 more)
examples/js/bots/: bot.ts  executor.ts  golden_price.ts  mm_external_price_bot.ts  run_bots.ts  utils.ts
examples/js/cli/: deposit.ts  dumpdb.ts  monitor_kafka_message.ts  register_new_user.ts  reload_market.ts  reset.ts
examples/js/tests/: ids.ts  multi_market.ts  print_orders.ts  put_batch_orders.ts  set_markets.ts  stress.ts  tick.ts  tick_no_deploy.ts  trade.ts  transfer.ts
examples/python/: gen_grpc.sh  matchengine_pb2.py  matchengine_pb2_grpc.py  ordersigner_pb2.py  ordersigner_pb2_grpc.py  put_order.py  requirements.txt
migrations/: 20200123090047_trade_log.sql  20200123090258_trade_history.sql  20210114140803_kline.sql  20210223025223_markets.sql  20210223072038_markets_preset.sql  20210310150412_market_constraint.sql  20210313144040_order_upgrade.sql  20210514140412_account.sql  20210514140412_user.sql  20210514142408_add_post_only_to_order_slice.sql  20210607094808_internal_transfer.sql  20210630094808_mock_users.sql  20210817060757_add_signature_to_internal_transfer.sql  20210907135410_add_signature_to_balance_history.sql
migrations/2020-01-23-090047_create_trade_log/: down.sql  up.sql
migrations/2020-01-23-090258_create_trade_history/: down.sql  up.sql
migrations/mock/: 20210115121017_kline.sql
migrations/reset/: down.sql  up.sql
migrations/ts/: 20210114140803_kline.sql
proto/: matchengine.pb
proto/exchange/: matchengine.proto
release/: Dockerfile  release.sh
scripts/: install_all_deps.sh
src/: asset.rs  config.rs  controller.rs  database.rs  dto.rs  grpc_server.rs  history.rs  kline.rs  lib.rs  main.rs  market.rs  message.rs  models.rs  modelsnew.rs  persist.rs  primitives.rs  rest_api.rs  schema.rs  sequencer.rs  server.rs  sqlxextend.rs  types.rs  utils.rs
src/matchengine/: asset.rs  controller.rs  dto.rs  eth_guard.rs  history.rs  market.rs  mock.rs  mod.rs  persist.rs  rpc.rs  sequencer.rs  server.rs  user_manager.rs
src/matchengine/asset/: asset_manager.rs  balance_manager.rs  mod.rs  persist.rs  update_controller.rs  user_manager.rs
src/matchengine/market/: mod.rs  order.rs  trade.rs
src/matchengine/persist/: mod.rs  persistor.rs  persistor_gen.rs  state_save_load.rs
src/matchengine/rpc/: google.api.rs  matchengine.rs  mod.rs
src/message/: consumer.rs  mod.rs  persist.rs  producer.rs
src/openapi/: manage.rs  mod.rs  personal_history.rs  public_history.rs  tradingview.rs  user.rs
src/restapi/: config.rs  errors.rs  main.rs  manage.rs  mock.rs  mod.rs  personal_history.rs  public_history.rs  state.rs  tradingview.rs  types.rs  user.rs
src/storage/: config.rs  database.rs  mod.rs  models.rs  sqlxextend.rs
src/types/: mod.rs
src/utils/: auth.rs  mod.rs  serde.rs  strings.rs  timeutil.rs
