[package]
name = "dingir-exchange"
version = "0.1.0"
authors = [ "lispczz <mycinbrin@gmail.com>" ]
edition = "2021"

[dependencies]
actix-rt = "2.1.0"
actix-web = "4.0.0-beta.12"
anyhow = "1.0.38"
arrayref = "0.3.6"
bytes = "1.0.1"
chrono = { version = "0.4.19", features = [ "serde" ] }
config_rs = { package = "config", version = "0.10.1" }
const_format = "0.2.15"
crossbeam-channel = "0.5.0"
dotenv = "0.15.0"
fluidex-common = { git = "https://github.com/fluidex/common-rs", branch = "master", features = [ "kafka", "non-blocking-tracing", "rust-decimal-dingir-exchange" ] }
futures = "0.3.13"
futures-channel = "0.3.13"
futures-core = { version = "0.3.13", default-features = false }
futures-util = { version = "0.3.13", default-features = false }
hex = "0.4.3"
humantime = "2.1.0"
humantime-serde = "1.0.1"
hyper = "0.14.4"
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.14"
nix = "0.20.0"
num_enum = "0.5.1"
orchestra = { git = "https://github.com/fluidex/orchestra.git", branch = "master", features = [ "exchange" ] }
paperclip = { git = "https://github.com/fluidex/paperclip.git", features = [ "actix", "chrono", "rust_decimal" ] }
qstring = "0.7.2"
rand = "0.8.3"
serde = { version = "1.0.124", features = [ "derive" ] }
serde_json = "1.0.64"
sqlx = { version = "0.5.1", features = [ "runtime-tokio-rustls", "postgres", "chrono", "decimal", "migrate" ] }
thiserror = "1.0.24"
tokio = { version = "1.9.0", features = [ "full" ] }
tonic = "0.5.2"
tracing = "0.1"
tracing-appender = "0.1"
tracing-subscriber = "0.2"
ttl_cache = "0.5.1"

[[bin]]
name = "restapi"
path = "src/bin/restapi.rs"

[[bin]]
name = "matchengine"
path = "src/bin/matchengine.rs"

[features]
windows_build = [ "fluidex-common/rdkafka-dynamic" ]
emit_state_diff = [ ]
default = [ "emit_state_diff" ]
#default = ["windows_build"]
#default = ["windows_build", "emit_state_diff"]
